--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,21 @@ body {
     color: #333;
 }
 
+#cabecera {
+    background: #33a;
+    box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 0.5em;
+    margin: 0;
+    font-weight: bold;
+}
+
+#cabecera #tagline {
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container {
     width: 70%;
     padding: 1em;
